Refactoring: minor changes

--- a/GalleryMVC_With_Auth/Views/Home/tests.cshtml
+++ b/GalleryMVC_With_Auth/Views/Home/tests.cshtml
@@ -14,16 +14,18 @@
 </div>
 
 <div id="albums"></div>
-<div class="grid" id="images"></div>
+@*<div class="grid" id="images"></div>
 
 <script src="@Url.Content("~/Scripts/views/main.jsx")"></script>
-<script src="@Url.Content("~/Scripts/views/Found.jsx")"></script>
+<script src="@Url.Content("~/Scripts/views/Found.jsx")"></script>*@
 
-<a href="#albums" class="btn btn-info btn-lg smoothScroll">
+@*<a href="#albums" class="btn btn-info btn-lg smoothScroll">
     <span class="glyphicon glyphicon-arrow-up"></span> Up
-</a>
+</a>*@
 
-<script>
+
+
+@*<script>
     $(function() {
         $("img.lazy").lazyload({
             effect: "fadeIn"
@@ -43,7 +45,7 @@
         //    scrollTop: bottom
         //}, 1000);
     });
-</script>
+</script>*@
 
 
 @section Scripts {
