--- a/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
+++ b/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
@@ -47,11 +47,12 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Главная", "Tests", new {controller = Defines.HomeControllerName}, new {@class = "home"})</li>
-                <li>@Html.ActionLink("О нас", "About", new {controller = Defines.HomeControllerName}, new {@class = "about"})</li>
+                @*<li>@Html.ActionLink("Главная", "Tests", new {controller = Defines.HomeControllerName}, new {@class = "home"})</li>*@
+                <li><a href="#home" class = "home smoothScroll">Главная</a></li>
+                @*<li>@Html.ActionLink("О нас", "About", new {controller = Defines.HomeControllerName}, new {@class = "about"})</li>*@
+                <li><a href="#S1" class="smoothScroll">О нас</a></li>
                 <li>@Html.ActionLink("Контакты", "Contact", new {controller = Defines.HomeControllerName}, new {@class = "contacts"})</li>
                 <li>@Html.ActionLink("Админ панель", Defines.IndexView, new {controller = "AdminPanel"}, new {@class = "admin"})</li>
-                <li><a href="#about">О нас(SPA)</a></li>
                 <li>
                     <div class="container">
                         <div class="row">
@@ -83,7 +84,7 @@
     <hr/>
 
 </div>
-<div class="bAbout" style="background-image: url('../Content/images/265795374.jpg'); color: white; font-size: 1em; box-shadow: 0 0 50px rgba(0, 0, 0, .8);" data-speed="5" data-type="background">
+<div class="bAbout" id="S1" style="background-image: url('../Content/images/265795374.jpg'); color: white; font-size: 1.2em;  box-shadow: 0 0 35px rgba(0, 0, 0, .8);" data-speed="5" data-type="background">
     <div class="container">
         <div class="row">
             <div id="about" class="col-md-4"></div>
