Refactoring: add text to div#about

--- a/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
+++ b/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
@@ -87,10 +87,17 @@
 <div class="bAbout" id="S1" style="background-image: url('../Content/images/265795374.jpg'); color: white; font-size: 1.2em;  box-shadow: 0 0 35px rgba(0, 0, 0, .8);" data-speed="5" data-type="background">
     <div class="container">
         <div class="row">
-            <div id="about" class="col-md-4"></div>
-            <script src="@Url.Content("~/Scripts/views/About.jsx")"></script>
+            <div id="about" class="col-md-4">Художественная галерея ОДО “БелАрт” создана в 1992 году. Со дня основания которой руководство и управление осуществляет ди-ректор–Людмила Крапивная
+ОДО “БелАрт” сочетает в себе художественный мага- зин, продающий произведе- ния современной живописи, графики, скульптуры более 150 профессиональных ху-дожников и народных мастеров из Беларуси и ряда стран СНГ; выставочную галерею, где за истекшее десятилетие прошло более трех десятков вернисажей белорусских и зарубежных художников; мастерскую, в которой по заказу изготавливаются все виды ху-дожественной продукции, оформляются работы.
+Широко представлены все виды декоративно – прикладного искусства - керамика, соломка, лоза, резьба по дереву, гобелены, батик, сувенирные изде-лия из натуральной кожи, художественная ковка, бижутерия из полудрагоценных камней.
+В галерее имеется большой выбор художествен-ных материалов, столярных изделий, а также буки-нистическая литература по искусству и архитек-туре.
+На протяжении всего своего существования ОДО “БелАрт” также занимается культурно-просвети-тельской, информационной и консультативной дея-тельностью. </div>
+            @*<script src="@Url.Content("~/Scripts/views/About.jsx")"></script>*@
             <div class="col-md-4"> И ещё какая либо инфа</div>
-            <div class="col-md-4"> И ещё тута инфа</div>
+            <div class="col-md-4"> Art gallery “BelArt” was founded in 1992 year by its director Ludmila Krapivnaya.
+                                    “BelArt” combines an art shop which sells modern painyings, graphics, sculpture of more then 150 profes-sional and folk artiats from Belarus and outside, an exi-bition gallery, where were carried out more than 30 per-sonal exibitions and art studio where you can make an order for all kinds of art prodution and desighn. Here you can find wide spectrum of decorative-applied art-works – cersmics, straw, twig, carwing by wood, tapes-try, souvenirs of natural skin, art forge, jewelry with natural stones.
+                                    In the gallery there’s wide choice of artists materi-als,joiner’s works and also a literature about art and ar-chitecture.
+                                    Since its foundation the art gallery “BelArt” takes up culture-educational, informational and consultative activity. </div>
         </div>
         <div class="row">
             <div class="col-md-4"></div>
