--- a/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
+++ b/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
@@ -48,10 +48,11 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 @*<li>@Html.ActionLink("Главная", "Tests", new {controller = Defines.HomeControllerName}, new {@class = "home"})</li>*@
-                <li><a href="#home" class = "home smoothScroll">Главная</a></li>
+                <li><a href="#home" class="home smoothScroll">Главная</a></li>
                 @*<li>@Html.ActionLink("О нас", "About", new {controller = Defines.HomeControllerName}, new {@class = "about"})</li>*@
                 <li><a href="#S1" class="smoothScroll">О нас</a></li>
-                <li>@Html.ActionLink("Контакты", "Contact", new {controller = Defines.HomeControllerName}, new {@class = "contacts"})</li>
+                @*<li>@Html.ActionLink("Контакты", "Contact", new {controller = Defines.HomeControllerName}, new {@class = "contacts"})</li>*@
+                <li><a href="#contacts" class="smoothScroll">Контакты</a></li>
                 <li>@Html.ActionLink("Админ панель", Defines.IndexView, new {controller = "AdminPanel"}, new {@class = "admin"})</li>
                 <li>
                     <div class="container">
@@ -60,7 +61,7 @@
                             <div class="search-form">
                                 <div class="form-group has-feedback">
                                     <label for="search" class="sr-only">Поиск</label>
-                                    @Html.TextBox("search", "", new { @class = "form-control", Name = "search", id = "search", placeholder = "Поиск" })
+                                    @Html.TextBox("search", "", new {@class = "form-control", Name = "search", id = "search", placeholder = "Поиск"})
                                     <span class="glyphicon glyphicon-search form-control-feedback"></span>
                                 </div>
                             </div>
@@ -72,79 +73,22 @@
         </div>
     </div>
 </div>
-<div class="splash">
-    <div class="container" style="color: gray;">
-        <h1 class="hd">художественная галерея</h1>
-        <p class="lead logotype" style="font-size: 420%;"><span style="color: #BE4C39">B</span>el<span style="color: #BE4C39">A</span>rt
-        </p>
-    </div>
-</div>
-<div class="container body-content" id="results">
-    @RenderBody()
-    <hr/>
-
-</div>
-<div class="bAbout" id="S1" style="background-image: url('../Content/images/265795374.jpg'); color: white; font-size: 1.2em;  box-shadow: 0 0 35px rgba(0, 0, 0, .8);" data-speed="5" data-type="background">
-    <div class="container">
-        <div class="row">
-            <div id="about" class="col-md-4">Художественная галерея ОДО “БелАрт” создана в 1992 году. Со дня основания которой руководство и управление осуществляет ди-ректор–Людмила Крапивная
-ОДО “БелАрт” сочетает в себе художественный мага- зин, продающий произведе- ния современной живописи, графики, скульптуры более 150 профессиональных ху-дожников и народных мастеров из Беларуси и ряда стран СНГ; выставочную галерею, где за истекшее десятилетие прошло более трех десятков вернисажей белорусских и зарубежных художников; мастерскую, в которой по заказу изготавливаются все виды ху-дожественной продукции, оформляются работы.
-Широко представлены все виды декоративно – прикладного искусства - керамика, соломка, лоза, резьба по дереву, гобелены, батик, сувенирные изде-лия из натуральной кожи, художественная ковка, бижутерия из полудрагоценных камней.
-В галерее имеется большой выбор художествен-ных материалов, столярных изделий, а также буки-нистическая литература по искусству и архитек-туре.
-На протяжении всего своего существования ОДО “БелАрт” также занимается культурно-просвети-тельской, информационной и консультативной дея-тельностью. </div>
-            @*<script src="@Url.Content("~/Scripts/views/About.jsx")"></script>*@
-            <div class="col-md-4"> И ещё какая либо инфа</div>
-            <div class="col-md-4"> Art gallery “BelArt” was founded in 1992 year by its director Ludmila Krapivnaya.
-                                    “BelArt” combines an art shop which sells modern painyings, graphics, sculpture of more then 150 profes-sional and folk artiats from Belarus and outside, an exi-bition gallery, where were carried out more than 30 per-sonal exibitions and art studio where you can make an order for all kinds of art prodution and desighn. Here you can find wide spectrum of decorative-applied art-works – cersmics, straw, twig, carwing by wood, tapes-try, souvenirs of natural skin, art forge, jewelry with natural stones.
-                                    In the gallery there’s wide choice of artists materi-als,joiner’s works and also a literature about art and ar-chitecture.
-                                    Since its foundation the art gallery “BelArt” takes up culture-educational, informational and consultative activity. </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4"></div>
-            <div class="col-md-4">VK</div>
-            <div class="col-md-4">FB</div>
+    <div class="splash">
+        <div class="container" style="color: gray;">
+            <h1 class="hd">художественная галерея</h1>
+            <p class="lead logotype" style="font-size: 420%;">
+                <span style="color: #BE4C39">B</span>el<span style="color: #BE4C39">A</span>rt
+            </p>
         </div>
     </div>
-</div>
-
-    <div class="grid container body-content" id="images"></div>
-
-    <script src="@Url.Content("~/Scripts/views/main.jsx")"></script>
-<script src="@Url.Content("~/Scripts/views/Found.jsx")"></script>
-
-    <a href="#albums" class="btn btn-info btn-lg smoothScroll">
-        <span class="glyphicon glyphicon-arrow-up"></span> Up
-    </a>
+@RenderBody()
 
 <footer class="footer">
     <div class="container">
         <p class="text-muted">&copy; @DateTime.Now.Year - ramzzzay@gmail.com</p>
     </div>
 </footer>
-    <script>
-    $(function() {
-        $("img.lazy").lazyload({
-            effect: "fadeIn"
-        });
-    });
-
-    $('.smoothScroll').click(function(event) {
-        event.preventDefault();
-        var href = $(this).attr('href');
-        var target = $(href);
-        var top = target.offset().top;
-        var bottom = $(window).scrollTop() + $(window).height();
-        $('html, body').animate({
-            scrollTop: top
-        }, 1500);
-        //$('html, body').animate({
-        //    scrollTop: bottom
-        //}, 1000);
-    });
-    </script>
-@*@Scripts.Render("~/bundles/galmagic")*@
 @Scripts.Render("~/bundles/bootstrap")
-@Scripts.Render("~/bundles/magic")
 @RenderSection("scripts", false)
 @Html.Partial("_GoogleAnalytics")
 </body>
