Add: carousel to main page

--- a/GalleryMVC_With_Auth/Views/Home/tests.cshtml
+++ b/GalleryMVC_With_Auth/Views/Home/tests.cshtml
@@ -4,6 +4,54 @@
 }
 
 
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+        <div class="item active">
+            <img src="../Content/images/443322898.jpg" alt="Chania" style="width: 100%; height: 730px;">
+            <div class="carousel-caption">
+                <h3>BelArt</h3>
+                <p>Это красивейшие картины.</p>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="../Content/images/165281196.jpg" alt="Chania" style="width: 100%; height: 730px;">
+            <div class="carousel-caption">
+                <h3>BelArt</h3>
+                <p>Это большой выбор.</p>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="../Content/images/774354082.jpg" alt="Flower" style="width: 100%; height: 730px;">
+            <div class="carousel-caption">
+                <h3>BelArt</h3>
+                <p>Это простота.</p>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="../Content/images/-1081325747.jpg" alt="Flower" style="width: 100%; height: 730px;">
+            <div class="carousel-caption">
+                <h3>BelArt</h3>
+                <p>Это ваш выбор!</p>
+            </div>
+        </div>
+    </div>
+
+
+</div>
+
+
 <div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
     <div class="slides"></div>
     <h3 class="title"></h3>
