--- a/GalleryMVC_With_Auth/Views/Manage/Index.cshtml
+++ b/GalleryMVC_With_Auth/Views/Manage/Index.cshtml
@@ -26,6 +26,8 @@
             @Model.Logins.Count [
             @Html.ActionLink(Defines.ManageControllerName, Defines.ManageLoginsView) ]
         </dd>
+        <dt>Админ Панель</dt>
+        <dd>@Html.ActionLink("Админ панель", Defines.IndexView, new { controller = "AdminPanel" }, new { @class = "admin" })</dd>
         @*
             Phone Numbers can used as a second factor of verification in a two-factor authentication system.
              
