--- a/GalleryMVC_With_Auth/Views/Home/tests.cshtml
+++ b/GalleryMVC_With_Auth/Views/Home/tests.cshtml
@@ -108,11 +108,15 @@
                 Брест, набярэжная Францыска Скарыны 2<br />
                 <abbr title="Phone">Тел:</abbr>
                 8 0162 20-45-95
-                @(Html.GoogleMap().Name("Brest")
+                <br/>
+                <button class="btn btn-info" data-toggle="collapse" data-target="#map">Открыть Карту</button>
+                <div id="map" class="collapse">
+                    @(Html.GoogleMap().Name("Brest")
               .Width(600)
               .Height(500)
               .Center(c => c.Address("Беларусь, Брест, набярэжная Францыска Скарыны 2"))
               .Markers(m => m.Add()).Zoom(15))
+                </div>
             </address>
         </div>
     </div>
