Refactoring: preview to multi images

--- a/GalleryMVC_With_Auth/Views/AdminPanel/Upload.cshtml
+++ b/GalleryMVC_With_Auth/Views/AdminPanel/Upload.cshtml
@@ -8,7 +8,7 @@
 
     <input type="file" name="files" id="files" style="width: 100%;" multiple="multiple" accept="image/*"/>
     <p/>
-    <img id="image" style="width: 250px;height: auto"/>
+    <output id="list"></output>
     @Html.ValidationSummary("", new {@class = "text-danger"})
     <div class="form-group">
         @Html.LabelFor(m => m.Picture.Name, new {@class = "col-md-2 control-label"})
@@ -41,16 +41,41 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
     <script>
-        document.getElementById("files").onchange = function () {
-            var reader = new FileReader();
+        function handleFileSelect(evt) {
+            var files = evt.target.files;
 
-            reader.onload = function (e) {
-                // get loaded data and render thumbnail.
-                document.getElementById("image").src = e.target.result;
-            };
+            // Loop through the FileList and render image files as thumbnails.
+            for (var i = 0, f; f = files[i]; i++) {
 
-            // read the image file as a data URL.
-            reader.readAsDataURL(this.files[0]);
-        };
+                // Only process image files.
+                if (!f.type.match('image.*')) {
+                    continue;
+                }
+
+                var reader = new FileReader();
+
+                // Closure to capture the file information.
+                reader.onload = (function (theFile) {
+                    return function (e) {
+                        // Render thumbnail.
+                        var span = document.createElement('span');
+                        span.innerHTML =
+                        [
+                          '<img style="height: 75px; border: 1px solid #000; margin: 5px" src="',
+                          e.target.result,
+                          '" title="', escape(theFile.name),
+                          '"/>'
+                        ].join('');
+
+                        document.getElementById('list').insertBefore(span, null);
+                    };
+                })(f);
+
+                // Read in the image file as a data URL.
+                reader.readAsDataURL(f);
+            }
+        }
+
+        document.getElementById('files').addEventListener('change', handleFileSelect, false);
     </script>
 }
