--- a/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
+++ b/GalleryMVC_With_Auth/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            @Html.ActionLink("BA", "Tests", Defines.HomeControllerName, null, new {@class = "navbar-brand logotypeM", style = "color: white"})
+            @Html.ActionLink("BA", Defines.IndexView, Defines.HomeControllerName, null, new {@class = "navbar-brand logotypeM", style = "color: white"})
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
