--- a/GalleryMVC_With_Auth/Views/Home/Index.cshtml
+++ b/GalleryMVC_With_Auth/Views/Home/Index.cshtml
@@ -112,7 +112,7 @@
 <script src="@Url.Content("~/Scripts/views/main.jsx")"></script>
 <script src="@Url.Content("~/Scripts/views/Found.jsx")"></script>
 
-<div class="container" id="contacts">
+<div class="container" id="contacts" style="padding-bottom: 50px;">
     <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-4">
@@ -120,27 +120,26 @@
             <h2>Контакты.</h2>
 
             <address>
-                Беларусь<br />
-                Брест, набярэжная Францыска Скарыны 2<br />
+                Беларусь<br/>
+                Брест, набярэжная Францыска Скарыны 2<br/>
                 <abbr title="Phone">Тел:</abbr>
                 8 0162 20-45-95
-                <br />
+                <br/>
                 <button class="btn btn-info" data-toggle="collapse" data-target="#map">Открыть Карту</button>
                 <div id="map" class="collapse">
                     @(Html.GoogleMap().Name("Brest")
-              .Width(600)
-              .Height(500)
-              .Center(c => c.Address("Беларусь, Брест, набярэжная Францыска Скарыны 2"))
-              .Markers(m => m.Add()).Zoom(15))
+                          .Width(600)
+                          .Height(500)
+                          .Center(c => c.Address("Беларусь, Брест, набярэжная Францыска Скарыны 2"))
+                          .Markers(m => m.Add()).Zoom(15))
                 </div>
             </address>
+            <a href="#albums" class="btn btn-info btn-lg smoothScroll">
+                <span class="glyphicon glyphicon-arrow-up"></span> Up
+            </a>
         </div>
     </div>
 </div>
-
-<a href="#albums" class="btn btn-info btn-lg smoothScroll">
-    <span class="glyphicon glyphicon-arrow-up"></span> Up
-</a>
 
 
 @section Scripts {
